cabal-version:    3.0
name:             control-plane
version:          0.0.1
homepage:         https://github.com/tchoutri/control-plane#readme
bug-reports:      https://github.com/tchoutri/control-plane/issues
author:           Théophile Choutri
maintainer:       Théophile Choutri
license:          MIT
build-type:       Simple
extra-source-files:
    CHANGELOG.md
    LICENSE.md
    README.md

source-repository head
  type: git
  location: https://github.com/tchoutri/control-plane

common common-extensions
  default-extensions: ConstraintKinds
                      DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      DerivingVia
                      DuplicateRecordFields
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      KindSignatures
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TypeApplications
                      TypeOperators
  default-language: Haskell2010

common common-ghc-options
  ghc-options: -Wall
               -Wcompat
               -Werror
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wpartial-fields
               -Wredundant-constraints
               -fhide-source-paths
               -Wno-unused-do-bind
               -fwrite-ide-info
               -hiedir=.hie
               -haddock
               -j

common common-rts-options
  ghc-options: -rtsopts
               -threaded
               -with-rtsopts=-N

library
  import: common-extensions
  import: common-ghc-options
  hs-source-dirs:
    src
  exposed-modules:
    CLI
    DB.Notification
    DB.Types
    DB.User
    Environment
    Environment.Has
    Job 
    Job.DB
    Job.Model
    Job.Runner
    Network.Wai.Middleware.CSP
    Server
    TUI
    TUI.UI
    Web
    Web.API.Helpers
    Web.Controller.API
    Web.Controller.Home
    Web.Error
    Web.Router
    Web.Templates
    Web.Types
    Web.View.Base
    Web.View.Home
  build-depends:
    aeson                       ^>= 1.5.5,
    async                       ^>= 2.2.2,
    base                        ^>= 4.14.1,
    brick                       ^>= 0.60.2,
    colourista                  ^>= 0.1.0,
    directory                   ^>= 1.3.6,
    envparse                    ^>= 0.4.1,
    http-client                 ^>= 0.7.5,
    http-client-tls             ^>= 0.3.5,
    http-types                  ^>= 0.12.3,
    monad-control               ^>= 1.0.2,
    mtl                         ^>= 2.2.2,
    mustache                    ^>= 2.3.1,
    optparse-applicative        ^>= 0.16.1,
    password                    ^>= 2.1.0.0,
    pg-entity                   ^>= 0.0.1,
    pg-transact                 ^>= 0.3.1,
    postgresql-simple           ^>= 0.6.4,
    postgresql-simple-migration ^>= 0.1.15,
    relude                      ^>= 1.0,
    resource-pool               ^>= 0.2.3,
    safe-exceptions             ^>= 0.1.7,
    scotty                      ^>= 0.12,
    text                        ^>= 1.2.4,
    time                        ^>= 1.9.3,
    unordered-containers        ^>= 0.2.13,
    uuid                        ^>= 1.3.13,
    vector                      ^>= 0.12.1,
    wai                         ^>= 3.2.3,
    wai-cors                    ^>= 0.2.7,
    wai-extra                   ^>= 3.1.6,
    wai-middleware-static       ^>= 0.9.0,
    warp                        ^>= 3.3.13,
  mixins: base hiding (Prelude)
        , relude ( Relude as Prelude
                 , Relude.Unsafe
                 , Relude.Monad
                 )

executable control-plane
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  main-is: Main.hs
  hs-source-dirs:
      app/tui
  build-depends:
      base
    , control-plane
    , relude

executable control-plane-server
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  main-is: Main.hs
  hs-source-dirs:
      app/server
  build-depends:
      base
    , control-plane
    , relude

executable control-plane-jobs
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  main-is: Main.hs
  hs-source-dirs:
      app/jobs
  build-depends:
      base
    , control-plane
    , relude

test-suite control-plane-test
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  build-depends:
      aeson
    , aeson-pretty
    , base
    , control-plane
    , hspec
    , hspec-pg-transact
    , pg-transact
    , postgresql-simple
    , postgresql-simple-migration
    , hspec-expectations-lifted
    , relude
    , string-qq
    , time
    , uuid
  other-modules:
    DB.Helpers
    DB.NotificationSpec
    DB.JobSpec
    Model.Notification
  mixins: base hiding (Prelude)
        , relude ( Relude as Prelude
                 , Relude.Unsafe)
